# noentropy

./: .env.example  .gitignore  Cargo.toml  HACKATHON_REVIEW.md  README.md  config.example.toml  install.bat  install.ps1  uninstall.ps1
.github/workflows/: rust.yml
docs/: CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  HOW_IT_WORKS.md  INSTALLATION.md  TROUBLESHOOTING.md  USAGE.md
src/: cache.rs  cache_tests.rs  config.rs  config_tests.rs  error.rs  files.rs  files_tests.rs  gemini.rs  gemini_errors.rs  gemini_helpers.rs  gemini_types.rs  lib.rs  main.rs  prompt.rs  undo.rs  undo_tests.rs
src/cli/: args.rs  errors.rs  mod.rs  orchestrator.rs  path_utils.rs
src/cli/handlers/: mod.rs  offline.rs  online.rs  undo.rs
src/files/: batch.rs  batch_test.rs  categorizer.rs  categorizer_test.rs  detector.rs  detector_test.rs  file_ops.rs  mod.rs  mover.rs  undo.rs
src/files/duplicate/: confirmation.rs  display.rs  duplicate_detector.rs  mod.rs  types.rs
src/files/mover/: confirmation.rs  display.rs  execution.rs  mod.rs  paths.rs  types.rs
src/files/undo/: cleanup.rs  confirmation.rs  display.rs  execution.rs  mod.rs  types.rs
src/gemini/: client.rs  errors.rs  mod.rs  prompt.rs
src/models/: metadata.rs  mod.rs  move_record.rs  organization.rs
src/settings/: config.rs  mod.rs  prompt.rs  tests.rs
src/storage/: cache.rs  mod.rs  undo_log.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: integration_offline.rs  integration_online.rs  test_cache.rs  test_offline_handler.rs  test_online_handler.rs  test_path_utils.rs  test_undo_handler.rs
