[package]
name = "noentropy"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"
