[package]
name = "noentropy"
version = "1.0.4"
edition = "2024"

[dependencies]
blake3 = "1.5"
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
directories = "5.0.1"
futures = "0.3.31"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.11"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
toml = "0.8.19"
walkdir = "2.5.0"
ratatui = "0.30.0"
crossterm = "0.28.1"

[dev-dependencies]
tempfile = "3.15"
